--- a/app/views/penggunas/new.html.erb
+++ b/app/views/penggunas/new.html.erb
@@ -1,5 +1,8 @@
-<%= form_with(model: @pengguna, local: true) do |f| %>
+<%= form_with(model: @pengguna, local: true, id: "borang_pengguna") do |f| %>
 <%= render 'shared/error_messages', object: @pengguna %>
+<section class= 'formValidator'>
+
+</section>
 <li>
   <%= f.label :username %>
   <br>
@@ -25,6 +28,12 @@
 </li>
 <br>
 <li>
-  <%= f.submit "Create my account" %>
+  <%= f.submit "Create my account", data: { disable_with: false } %> <!data need to disable because of ruby on rails behaviour button in order to run the js code>
   </li>
 <% end %>
+
+
+<div class="input-group flex-nowrap"> 
+  <span class="input-group-text" id="addon-wrapping">Username</span>
+  <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
+</div>
