--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+body {
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+  /* padding: 50px; */
+  /* margin-top: 50px; */
+  text-align: center;
+  display: center;
+  /* image-orientation: center; */
+  /* border: 10px solid black; */
+  /* background-color: #92a8d1; */
+}
+
+img {
+ margin-left: auto;
+ margin-right: auto;
+  display: center;
+
+}
