--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,13 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
-  <body>
+  <header>
     <%= render 'shared/header' %>
+  </header>
+  <body>
+
     <%= yield %>
 
     <!-- Optional JavaScript; choose one of the two! -->
