--- a/app/views/penggunas/show.html.erb
+++ b/app/views/penggunas/show.html.erb
@@ -4,22 +4,24 @@
   <% if current_user.followings.include?(@user) %>
     <%= form_for @find_relationship, html: {method: :delete} do |f| %>
     <%= f.submit 'Unfollow' %>
-    <% end %>
+  <% end %>
     <% else %>
-    <%= form_for Relationship.new do |f| %>
-    <%= hidden_field_tag :following_id, @user.id %>
-    <%= f.submit 'Follow' %>
-    <% end %>
-    <% end %>
-    <% end %>
+      <%= form_for Relationship.new do |f| %>
+      <%= hidden_field_tag :following_id, @user.id %>
+      <%= f.submit 'Follow' %>
+      <% end %>
+   <% end %>
+<% end %>
 
-<%= form_with(model: Post.new, local: true) do |f| %>
-<%= f.label :Insert %>
-<br>
-<%= f.file_field :photo %>
-<%= f.label :Caption %>
-<%= f.text_field :caption%>
-<%= f.submit :post %>
+<% if current_user == @user %>
+  <%= form_with(model: Post.new, local: true) do |f| %>
+    <%= f.label :Insert %>
+    <br>
+    <%= f.file_field :photo %>
+    <%= f.label :Caption %>
+    <%= f.text_field :caption%>
+    <%= f.submit :post %>
+  <% end %>
 <% end %>
 
 <br>
