remove javascript validate

--- a/app/views/penggunas/new.html.erb
+++ b/app/views/penggunas/new.html.erb
@@ -28,12 +28,12 @@
 </li>
 <br>
 <li>
-  <%= f.submit "Create my account", data: { disable_with: false } %> <!data need to disable because of ruby on rails behaviour button in order to run the js code>
+  <%= f.submit "Create my account"  %> <!data: { disable_with: false }> <!data need to disable because of ruby on rails behaviour button in order to run the js code>
   </li>
 <% end %>
 
 
-<div class="input-group flex-nowrap"> 
+<div class="input-group flex-nowrap">
   <span class="input-group-text" id="addon-wrapping">Username</span>
   <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
 </div>
